[package]
name = "keramics"
description = "Analysis of data formats"
version = "0.0.0"
edition = "2021"
authors = ["Joachim Metz <joachim.metz@gmail.com>"]
license = "Apache-2.0"

[lib]
name = "keramics"
path = "src/lib.rs"

[[bin]]
name = "image_analyzer"
path = "tools/image_analyzer.rs"
publish = false

[[bin]]
name = "keramicsinfo"
path = "tools/info_tool.rs"

[[bin]]
name = "keramicshash"
path = "tools/hash_tool.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
layout_map = { path = "./layout_map" }
pest = { version = "2.7.14" }
pest_derive = { version = "2.7.14" }
