[workspace]
members = [
    "./checksums",
    "./compression",
    "./core",
    "./datetime",
    "./docs/mdbook-tables",
    "./encoding",
    "./formats",
    "./hashes",
    "./layout_map",
    "./sigscan",
    "./tools",
    "./types",
    "./vfs",
]
resolver = "2"

[workspace.package]
authors = ["Joachim Metz <joachim.metz@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
version = "0.0.0"
