[workspace]
members = [
    "./docs/mdbook-tables",
    "./fuzz",
    "./keramics-checksums",
    "./keramics-compression",
    "./keramics-core",
    "./keramics-datetime",
    "./keramics-encodings",
    "./keramics-formats",
    "./keramics-hashes",
    "./keramics-layout-map",
    "./keramics-python",
    "./keramics-sigscan",
    "./keramics-tools",
    "./keramics-types",
    "./keramics-vfs",
]
resolver = "2"

[workspace.package]
authors = ["Joachim Metz <joachim.metz@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/keramics/keramics"
version = "0.0.0"
