[package]
authors.workspace = true
description = "Keramics decompression methods"
edition.workspace = true
license.workspace = true
name = "compression"
publish = false
version.workspace = true

[lib]
name = "compression"
path = "src/lib.rs"

[dependencies]
checksums = { path = "../checksums" }
core = { path = "../core" }
layout_map = { path = "../layout_map" }
types = { path = "../types" }
