[package]
name = "keramics-fuzz"
description = "Analysis of data formats"
version = "0.0.0"
edition = "2021"
authors = ["Joachim Metz <joachim.metz@gmail.com>"]
license = "Apache-2.0"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "adc"
path = "fuzz_targets/adc.rs"
test = false
doc = false

[[bin]]
name = "apm"
path = "fuzz_targets/apm.rs"
test = false
doc = false

[[bin]]
name = "bzip2"
path = "fuzz_targets/bzip2.rs"
test = false
doc = false

[[bin]]
name = "deflate"
path = "fuzz_targets/deflate.rs"
test = false
doc = false

[[bin]]
name = "gpt"
path = "fuzz_targets/gpt.rs"
test = false
doc = false

[[bin]]
name = "lzfse"
path = "fuzz_targets/lzfse.rs"
test = false
doc = false

[[bin]]
name = "lznt1"
path = "fuzz_targets/lznt1.rs"
test = false
doc = false

[[bin]]
name = "lzvn"
path = "fuzz_targets/lzvn.rs"
test = false
doc = false

[[bin]]
name = "lzxpress"
path = "fuzz_targets/lzxpress.rs"
test = false
doc = false

[[bin]]
name = "lzxpress_huffman"
path = "fuzz_targets/lzxpress_huffman.rs"
test = false
doc = false

[[bin]]
name = "mbr"
path = "fuzz_targets/mbr.rs"
test = false
doc = false

[[bin]]
name = "qcow"
path = "fuzz_targets/qcow.rs"
test = false
doc = false

[[bin]]
name = "sparseimage"
path = "fuzz_targets/sparseimage.rs"
test = false
doc = false

[[bin]]
name = "udif"
path = "fuzz_targets/udif.rs"
test = false
doc = false

[[bin]]
name = "vhd"
path = "fuzz_targets/vhd.rs"
test = false
doc = false

[[bin]]
name = "vhdx"
path = "fuzz_targets/vhdx.rs"
test = false
doc = false

[[bin]]
name = "zlib"
path = "fuzz_targets/zlib.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
keramics = { path = ".." }
