[package]
authors.workspace = true
description = "Keramics OSS-Fuzz fuzz targets"
edition.workspace = true
license.workspace = true
name = "keramics-fuzz"
publish = false
repository.workspace = true
version.workspace = true

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "adc"
path = "fuzz_targets/adc.rs"
test = false
doc = false

[[bin]]
name = "apm"
path = "fuzz_targets/apm.rs"
test = false
doc = false

[[bin]]
name = "bzip2"
path = "fuzz_targets/bzip2.rs"
test = false
doc = false

[[bin]]
name = "deflate"
path = "fuzz_targets/deflate.rs"
test = false
doc = false

[[bin]]
name = "ewf"
path = "fuzz_targets/ewf.rs"
test = false
doc = false

[[bin]]
name = "gpt"
path = "fuzz_targets/gpt.rs"
test = false
doc = false

[[bin]]
name = "lzfse"
path = "fuzz_targets/lzfse.rs"
test = false
doc = false

[[bin]]
name = "lznt1"
path = "fuzz_targets/lznt1.rs"
test = false
doc = false

[[bin]]
name = "lzvn"
path = "fuzz_targets/lzvn.rs"
test = false
doc = false

[[bin]]
name = "lzxpress"
path = "fuzz_targets/lzxpress.rs"
test = false
doc = false

[[bin]]
name = "lzxpress_huffman"
path = "fuzz_targets/lzxpress_huffman.rs"
test = false
doc = false

[[bin]]
name = "mbr"
path = "fuzz_targets/mbr.rs"
test = false
doc = false

[[bin]]
name = "md5"
path = "fuzz_targets/md5.rs"
test = false
doc = false

[[bin]]
name = "qcow"
path = "fuzz_targets/qcow.rs"
test = false
doc = false

[[bin]]
name = "sha1"
path = "fuzz_targets/sha1.rs"
test = false
doc = false

[[bin]]
name = "sha224"
path = "fuzz_targets/sha224.rs"
test = false
doc = false

[[bin]]
name = "sha256"
path = "fuzz_targets/sha256.rs"
test = false
doc = false

[[bin]]
name = "sha512"
path = "fuzz_targets/sha512.rs"
test = false
doc = false

[[bin]]
name = "sparseimage"
path = "fuzz_targets/sparseimage.rs"
test = false
doc = false

[[bin]]
name = "udif"
path = "fuzz_targets/udif.rs"
test = false
doc = false

[[bin]]
name = "vhd"
path = "fuzz_targets/vhd.rs"
test = false
doc = false

[[bin]]
name = "vhdx"
path = "fuzz_targets/vhdx.rs"
test = false
doc = false

[[bin]]
name = "zlib"
path = "fuzz_targets/zlib.rs"
test = false
doc = false

[dependencies]
keramics-compression = { version = "0.0.0", path = "../keramics-compression" }
keramics-core = { version = "0.0.0", path = "../keramics-core" }
keramics-formats = { version = "0.0.0", path = "../keramics-formats" }
keramics-hashes = { version = "0.0.0", path = "../keramics-hashes" }
libfuzzer-sys = { version = "0.4" }
