[package]
authors.workspace = true
description = "Keramics digest hash calculation methods"
edition.workspace = true
license.workspace = true
name = "hashes"
publish = false
version.workspace = true

[lib]
name = "hashes"
path = "src/lib.rs"

[dependencies]
core = { path = "../core" }
types = { path = "../types" }
