[package]
authors.workspace = true
description = "Keramics decompression methods"
edition.workspace = true
license.workspace = true
license-file.workspace = true
name = "keramics-compression"
repository.workspace = true
version.workspace = true

[lib]
name = "keramics_compression"
path = "src/lib.rs"

[dependencies]
keramics-checksums = { version = "0.0.1", path = "../keramics-checksums" }
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-layout-map = { version = "0.0.1", path = "../keramics-layout-map" }
keramics-types = { version = "0.0.1", path = "../keramics-types" }
