[package]
authors.workspace = true
description = "Keramics decoding methods"
edition.workspace = true
license.workspace = true
license-file.workspace = true
name = "keramics-encodings"
repository.workspace = true
version.workspace = true

[lib]
name = "keramics_encodings"
path = "src/lib.rs"

[dependencies]
keramics-core = { version = "0.0.1", path = "../keramics-core" }
