[package]
authors.workspace = true
description = "Keramics encodings support"
edition.workspace = true
license.workspace = true
name = "keramics-encodings"
repository.workspace = true
version.workspace = true

[lib]
name = "keramics_encodings"
path = "src/lib.rs"

[dependencies]
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-types = { version = "0.0.1", path = "../keramics-types" }
