[package]
authors.workspace = true
description = "Keramics digest hash calculation methods"
edition.workspace = true
license.workspace = true
name = "keramics-hashes"
repository.workspace = true
version.workspace = true

[lib]
name = "keramics_hashes"
path = "src/lib.rs"

[dependencies]
keramics-core = { version = "0.0.0", path = "../keramics-core" }
keramics-types = { version = "0.0.0", path = "../keramics-types" }
