[package]
authors.workspace = true
description = "Keramics layout map procedural macros"
edition.workspace = true
license.workspace = true
name = "keramics-layout-map"
publish = false
repository.workspace = true
version.workspace = true

[lib]
name = "keramics_layout_map"
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = { version = "0.21.3" }
prettyplease = { version = "0.2.37" }
proc-macro2 = { version = "1.0.101" }
quote = { version = "1.0.41" }
syn = { version = "2.0.106" }
