[package]
authors.workspace = true
description = "Keramics data formats signature scanner"
edition.workspace = true
license.workspace = true
license-file.workspace = true
name = "keramics-sigscan"
repository.workspace = true
version.workspace = true

[lib]
name = "keramics_sigscan"
path = "src/lib.rs"

[dependencies]
keramics-core = { version = "0.0.1", path = "../keramics-core" }
