[package]
authors.workspace = true
description = "Tools for analysis of data formats"
edition.workspace = true
license.workspace = true
name = "keramics-tools"
repository.workspace = true
version.workspace = true
exclude = [
    "src/image_analyzer.rs",
    "src/export_tool.rs",
    "src/writer.rs",
]

[[bin]]
name = "image_analyzer"
path = "src/image_analyzer.rs"

[[bin]]
name = "keramicsexport"
path = "src/export_tool.rs"

[[bin]]
name = "keramicshash"
path = "src/hash_tool.rs"

[[bin]]
name = "keramicsinfo"
path = "src/info_tool.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
keramics-core = { version = "0", path = "../keramics-core" }
keramics-datetime = { version = "0", path = "../keramics-datetime" }
keramics-formats = { version = "0", path = "../keramics-formats" }
keramics-hashes = { version = "0", path = "../keramics-hashes" }
keramics-types = { version = "0", path = "../keramics-types" }
keramics-vfs = { version = "0", path = "../keramics-vfs" }
