[package]
authors.workspace = true
description = "Tools for analysis of data formats"
edition.workspace = true
license.workspace = true
license-file.workspace = true
name = "keramics-tools"
repository.workspace = true
version.workspace = true
exclude = [
    "src/export_tool.rs",
    "src/writer.rs",
]

[[bin]]
name = "keramicsexport"
path = "src/export_tool.rs"

[[bin]]
name = "keramicshash"
path = "src/hash_tool.rs"

[[bin]]
name = "keramicsimage"
path = "src/image_tool.rs"

[[bin]]
name = "keramicsinfo"
path = "src/info_tool.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.18" }
keramics-core = { version = "0.0.1", path = "../keramics-core" }
keramics-datetime = { version = "0.0.1", path = "../keramics-datetime" }
keramics-formats = { version = "0.0.1", path = "../keramics-formats" }
keramics-hashes = { version = "0.0.1", path = "../keramics-hashes" }
keramics-types = { version = "0.0.1", path = "../keramics-types" }
keramics-vfs = { version = "0.0.1", path = "../keramics-vfs" }
