[package]
authors.workspace = true
description = "Keramics Virtual File System (VFS)"
edition.workspace = true
license.workspace = true
name = "keramics-vfs"
version.workspace = true

[lib]
name = "keramics_vfs"
path = "src/lib.rs"

[dependencies]
keramics-core = {version = "0", path = "../keramics-core" }
keramics-datetime = {version = "0", path = "../keramics-datetime" }
keramics-formats = {version = "0", path = "../keramics-formats" }
keramics-sigscan = {version = "0", path = "../keramics-sigscan" }
keramics-types = {version = "0", path = "../keramics-types" }
