[package]
authors.workspace = true
description = "Analysis of data formats"
edition.workspace = true
license.workspace = true
name = "keramics"
version.workspace = true

[lib]
name = "keramics"
path = "src/lib.rs"

[dependencies]
layout_map = { path = "../layout_map" }
pest = { version = "2.7.14" }
pest_derive = { version = "2.7.14" }
