[package]
authors.workspace = true
description = "Layout map procedural macros"
edition.workspace = true
license.workspace = true
name = "layout_map"
publish = false
version.workspace = true

[lib]
name = "layout_map"
path = "src/lib.rs"
proc-macro = true

[dependencies]
darling = { version = "0.20.10" }
prettyplease = { version = "0.2.24" }
proc-macro2 = { version = "1.0.88" }
quote = { version = "1.0.37" }
syn = { version = "2.0.82" }
