[package]
authors.workspace = true
description = "Keramics Virtual File System (VFS)"
edition.workspace = true
license.workspace = true
name = "vfs"
version.workspace = true

[lib]
name = "vfs"
path = "src/lib.rs"

[dependencies]
core = { path = "../core" }
datetime = { path = "../datetime" }
formats = { path = "../formats" }
sigscan = { path = "../sigscan" }
types = { path = "../types" }
