[package]
authors.workspace = true
description = "mdbook preprocessor for extended Markdown tables"
edition.workspace = true
license.workspace = true
name = "mdbook-tables"
publish = false
version.workspace = true

[dependencies]
mdbook = { version = "0.4.42" }
pulldown-cmark = { version = "0.12.2" }
pulldown-cmark-to-cmark = { version = "18.0.0" }
serde_json = { version = "1.0.132" }
