[package]
name = "mdbook-tables"
description = "mdbook preprocessor for extended Markdown tables"
version = "0.0.0"
edition = "2021"
authors = ["Joachim Metz <joachim.metz@gmail.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
mdbook = { version = "0.4.42" }
pulldown-cmark = { version = "0.12.2" }
pulldown-cmark-to-cmark = { version = "18.0.0" }
serde_json = { version = "1.0.132" }
